[tool.poetry]
name = "python-web-6"
version = "0.1.0"
description = ""
authors = ["Ruslan2512 <ruslansirenko25@gmail.com>"]
readme = "README.md"
packages = [{include = "python_web_6"}]

[tool.poetry.dependencies]
python = "^3.8"
faker = "^18.6.2"
datetime = "^5.1"
timedelta = "^2020.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
